syntax = "proto3";

package gobox;

option go_package = "github.com/adrianmester/gobox/proto";

service GoBox {
    rpc SendFileInfo(SendFileInfoInput) returns (SendFileInfoResponse) {}
    rpc SendFileChunks(stream SendFileChunksInput) returns (Null) {}
    rpc InitialSyncComplete(Null) returns (Null) {}
    rpc DeleteFile(DeleteFileInput) returns (Null) {}
}

message SendFileInfoInput {
    string file_name = 1;
    int64 file_id = 2;
    bool is_directory = 3;
    int64 size = 4;
    int64 mod_time = 5;
}

message SendFileInfoResponse {
    bool send_chunk_ids = 1;
}

message SendFileChunksInput {
    ChunkID chunk_id = 1;
    optional bytes data = 2;
}

message ChunkID {
    int64 file_id = 1;
    int64 chunk_number = 2;
}

message DeleteFileInput {
    string path = 1;
}

message Null {}
